@@ -1,5 +1,12 @@
 2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* jtagmkII.c (jtagmkII_close): The GO command before signing off
+	turned out to do more harm than good; on the Xmega, it caused exactly
+	the opposite reaction, the CPU stopped.  Even without it, after the
+	RESET command, the target is running already.  So, drop the GO.
+
+2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* configure.ac: Print a configuration summary at the end of the
 	configure run
 
